--- a/style.css
+++ b/style.css
@@ -1,154 +1,206 @@
+html {
+  scroll-behavior: smooth;
+}
 * {
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    background-color: #f0e2c5;
-  }
-  header {
-    border: 2px solid #000;
-    text-align: center;
-    padding: 50px 0;
-  }
-  header h1 {
-    font-family: "Playfair Display SC", serif;
-    color:#9a5172;
-    margin-bottom: 20px;
-    font-size: 3rem;
-  }
-  header p {
-    font-family: "Lato", sans-serif;
-    color: #9a5179;
-  }
-  header button {
-    width: 200px;
-    height: 40px;
-    background-color: #49281a;
-    color: white;
-    border-radius: 5px;
-    border: none;
-    margin-top: 20px;
-   /* padding: 20px;*/
-  }
-  nav {
-   /* border: 2px solid #000;*/
-    text-align: center;
-    padding: 20px 0;
-    
-  }
-  nav ul li {
-    display: inline-block;
-    border: 1px solid #000;
-    font-family: "Lato", sans-serif;
-    padding: 10px 20px;
-    border-radius: 10px;
-    margin-right: 10px;
-  }
-  nav ul li a {
-    color: #9a5179;
-    text-decoration: none;
-  }
-  /* our menu section */
-  #our-shop,
-  #about-us,#contact ,
-  footer
-  {
-   /* border: 2px solid black;*/
-    width: 80%;
-    margin:   20px auto;
-  }
-  #our-shop h1,
-  #contact h2,
-  #about-us {
-    font-family: "Playfair Display SC", serif;
-    color: #9a5179;
-    margin-top: 20px;
-  }
-  .shop-items{
-    
-    /*border: 2px solid#000;*/
-    text-align: center;
-    margin-top: 20px;
-   
-  }
-  .shop-items h2{
-    font-family:"Playfair Display SC", serif;
-    color: #9a5179;
-    margin-bottom: 40px;
-    text-align: center;
-  }
-  .card {
-    display: inline-block;
-    width: 30%;
-    height: auto;
-    vertical-align: top;
-    border: 1px solid #000;
-    width: 240px;
-    padding: 10px;
-    border-radius: 5px;
-    font-family:"Lato", sans-serif; 
-    color: #9a5172;
-    margin:10px ;
-  }
-  .card-img-top {
-    max-width: 100%;
-    height: 250px;
-    object-fit: cover;
-    border-radius: 5px 5px 0px 0px;
-  }
-  .card-body {
-    text-align: center;
-  }
-  .card-title {
-    background-color:#b89ca4;
-    padding: 10px 0;
-  }
-  .card-text {
-    line-height: 1.5rem;
-    margin: 10px 0;
-  }
-  .btn {
-    display: inline-block;
-    margin-top: 10px;
-    background-color:#9a5179;
-    color: #fff;
-    border: none;
-    width: 100px;
-    padding: 10px 0;
-    border-radius: 0px 0px 5px 5px;
-  }
-  
-  /* about us section */
-  #about-us p,
-  #contact p
-   {
-    font-family: "Lato", sans-serif;
-    padding: 5px;
-    text-align: justify;
-    line-height: 1.5;
-    color: #9a5179;
-  }
-  form{
-    font-family: "Lato", sans-serif;
-    margin-top: 20px;
-  }
-  form div{
-    margin-bottom: 20px;
-  }
-  .form-label{
-    color: #9a5179;
-    display: inline-block;
-    width: 150px;
-    text-align: right;
-    margin-right: 10px;
-  }
-.form-contorl{
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  background-color: #edd1e1;
+}
+header {
+  border: 2px solid #000;
+  text-align: center;
+  padding: 50px 0;
+}
+header h1 {
+  font-family: "Playfair Display SC", serif;
+  color: #9a5172;
+  margin-bottom: 20px;
+  font-size: 3.5rem;
+  text-shadow: 5px 5px 10px rgba(0, 0, 0, 0.6);
+}
+header p {
+  font-family: "Lato", sans-serif;
+  color: #9a5179;
+}
+header a {
+  width: 200px;
+  height: 40px;
+  background-color: #9a5172;
+  color: white;
+  border-radius: 10px;
+  border: none;
+  padding: 20px;
+  text-shadow: 10px 10px 40px rgba(0, 0, 0, 0.8);
+}
+
+.container {
+  background-image: url(images/bg.jpg);
+  background-position: center;
+  background-size: cover;
+  background-color: #9a5179;
+  height: 350px;
+  /* color: #f0e2c5;*/
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+.content {
+  background-color: transparent;
+}
+.content h1 {
+  background-color: transparent;
+  /* text-shadow: 5px 5px 10px; */
+}
+.content p {
+  font-size: 20px;
+  font-weight: bold;
+  text-shadow: 1px 1px 3px;
+  background-color: transparent;
+}
+.content a {
+  background-color: #9a5179;
+  color: #ffff;
+  /* padding: 12px 24px; */
+  font-size: 16px;
+  font-weight: 800;
+  border: none;
+  border-radius: 5px 0 5px 0;
+  cursor: pointer;
+  margin-top: 20px;
+  text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.8);
+  box-shadow: 2px 4px 10px rgba(0, 0, 0, 0.4);
+}
+
+nav {
+  /* border: 2px solid #000;*/
+  text-align: center;
+  padding: 20px 0;
+  position: sticky;
+  top: 0;
+  background-color: #9a5172;
+}
+nav ul {
+  background-color: #9a5172;
+}
+nav ul li {
+  display: inline-block;
+  /*border: 1px solid #000;*/
+  background-color: #9a5172;
+  font-family: "Lato", sans-serif;
+  padding: 10px 20px;
+  border-radius: 10px;
+  margin-right: 10px;
+}
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  display: block;
+  background-color: #9a5172;
+}
+/* our menu section */
+#our-shop,
+#about-us,
+#contact,
+footer {
+  /* border: 2px solid black;*/
+  width: 80%;
+  margin: 20px auto;
+}
+#our-shop h1,
+#contact h2,
+#about-us {
+  font-family: "Playfair Display SC", serif;
+  color: #9a5179;
+  margin-top: 20px;
+}
+.shop-items {
+  /*border: 2px solid#000;*/
+  text-align: center;
+  margin-top: 20px;
+}
+.shop-items h2 {
+  font-family: "Playfair Display SC", serif;
+  color: #9a5179;
+  margin-bottom: 40px;
+  text-align: center;
+}
+.card {
+  display: inline-block;
+  width: 30%;
+  height: auto;
+  vertical-align: top;
+  border: 1px solid #000;
+  width: 240px;
+  padding: 10px;
+  border-radius: 5px;
+  font-family: "Lato", sans-serif;
+  color: #9a5172;
+  margin: 10px;
+}
+.card-img-top {
+  max-width: 100%;
+  height: 250px;
+  object-fit: cover;
+  border-radius: 2px 2px 0px 0px;
+}
+.card-body {
+  text-align: center;
+}
+.card-title {
+  background-color: #b89ca4;
+  padding: 10px 0;
+}
+.card-text {
+  line-height: 1.5rem;
+  margin: 10px 0;
+}
+.btn {
+  text-decoration: none;
+  font-family: "Lato", sans-serif;
+  display: inline-block;
+  margin-top: 10px;
+  background-color: #9a5179;
+  color: #fff;
+  border: none;
+  width: 100px;
+  padding: 10px 0;
+  border-radius: 2px 2px 5px 5px;
+}
+
+/* about us section */
+#about-us p,
+#contact p {
+  font-family: "Lato", sans-serif;
+  padding: 5px;
+  text-align: justify;
+  line-height: 1.5;
+  color: #9a5179;
+}
+form {
+  font-family: "Lato", sans-serif;
+  margin-top: 20px;
+}
+form div {
+  margin-bottom: 20px;
+}
+.form-label {
+  color: #9a5179;
+  display: inline-block;
+  width: 150px;
+  text-align: right;
+  margin-right: 10px;
+}
+.form-contorl {
   /*display:inline-block;*/
   width: 250px;
   border: none;
-  outline:none ;
+  outline: none;
   border-bottom: 2px dotted#9a5179;
 }
- .btnSubmit{
+.btnSubmit {
+  font-family: "Lato", sans-serif;
   margin-left: 160px;
   width: 200px;
   height: 40px;
@@ -158,13 +210,20 @@
   border: none;
   border-radius: 8px;
   cursor: pointer;
- }
- /*footer section*/
- footer{
- text-align: center;
- font-family:"Lato", sans-serif; 
- }
- footer p{
+}
+/*footer section*/
+footer {
+  text-align: center;
+  font-family: "Lato", sans-serif;
+}
+footer p {
   font-size: 0.9rem;
   color: #9a5172;
- }
+}
+#top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  color: #9a5172;
+  text-decoration: none;
+}
